# fred-analysis

./: .gitignore  README.md  example.env  pyproject.toml
backend/: app.py  main.py
backend/api/: __init__.py  api_utils.py  config.py  data_route.py  routes.py
backend/api/analysis/: analysis_utils.py
backend/api/database/: __init__.py  base_models.py  db_utils.py  models.py
frontend/: api_utils.py  comp.py  sol.py
frontend/assets/: style.css
