[tool.poetry]
name = "fred-tool"
version = "0.1.0"
description = "App that fetches FRED data, performs analysis, and displays results in UI"
authors = ["Quentin Mowat-Amiet"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
sqlalchemy = "^2.0.27"
python-dotenv = "^1.0.1"
pydantic = "^2.6.2"
aiohttp = "^3.9.3"
python-dateutil = "^2.8.2"
psycopg2 = "^2.9.9"
pandas = "^2.2.1"
solara = "^1.29.1"
fastapi = "^0.110.0"
matplotlib = "^3.8.3"
mplcyberpunk = "^0.7.1"
setuptools = "^69.2.0"
scipy = "^1.13.0"
statsmodels = "^0.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
